# character-skill-trees

./: CHARTER.md  DOCKSIDE-EXAM.md  EXTRACTION_COMPLETE.md  EXTRACTION_SUMMARY.md  FEATURES.md  LICENSE  MANIFEST.in  README.md  TEST_SUITE_COMPLETION_REPORT.md  pyproject.toml  pytest.ini  requirements-test.txt  setup.py  setup_test_env.sh
.github/workflows/: publish.yml  test.yml  validate.yml
character_skill_trees/: __init__.py  archetypes.py  manager.py
character_skill_trees/core/: __init__.py  skill.py  skill_tree.py
character_skill_trees/prerequisites/: __init__.py  requirements.py
character_skill_trees/progression/: __init__.py  experience.py  mastery.py
character_skill_trees/transfer/: __init__.py  synergies.py
docs/: ARCHITECTURE.md
examples/: archetype_demo.py  basic_usage.py
tests/: QUICKSTART.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  run_tests.py  test_archetypes.py  test_integration.py  test_prerequisites.py  test_progression.py  test_skills.py  test_synergies.py  verify_tests.py
