[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "character-skill-trees"
version = "1.0.0"
description = "Advanced skill progression and specialization system for AI characters"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LucidDreamer Team", email = "contact@luciddreamer.ai"}
]
keywords = ["ai", "characters", "skills", "progression", "rpg", "game-development", "skill-trees"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
examples = [
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/luciddreamer/character-skill-trees"
Documentation = "https://github.com/luciddreamer/character-skill-trees/blob/main/README.md"
Repository = "https://github.com/luciddreamer/character-skill-trees"
"Bug Tracker" = "https://github.com/luciddreamer/character-skill-trees/issues"

[project.scripts]
skill-demo = "character_skill_trees.demo:main"

[tool.setuptools]
packages = ["character_skill_trees"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
